Fix final issues, especially overwriting of palmonMove moveId in case of same learnedOnLevel -> changed to HashSet consisting of custom LearnableMove records